--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Geek screen</title>
-    <script src="index.js"></script>
     <link rel="stylesheet" href="index.css" />
   </head>
-  <body></body>
+  <body>
+    <canvas id="canvas"></canvas>
+    <script src="index.js"></script>
+  </body>
 </html>
